--- a/src/components/Repository/repository.css
+++ b/src/components/Repository/repository.css
@@ -22,7 +22,7 @@
   margin-bottom: 10px;
   }
   
-.repository-link {
+.git {
   display: inline-block;
   margin-top: 10px;
   color: #888;
@@ -30,6 +30,6 @@
   font-weight: bold;
   }
   
-.repository-link:hover {
+.git:hover {
   text-decoration: underline;
   }
